--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -169,6 +169,28 @@
         color: #333;
         margin-bottom: 50px;
     }
+
+    @media only screen and (max-width: 768px) {
+        .card {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        .group-name {
+            margin-left: 0;
+            margin-right: 0;
+        }
+
+        .add-member-link,
+        .add-doc-link {
+            position: static;
+            margin: 10px;
+        }
+
+        .group img {
+            margin-right: 10px;
+        }
+    }
 </style>
 {% endblock style %}
 
