cleaned the code

--- a/ZenseProject/videoCall/templates/form_template.html
+++ b/ZenseProject/videoCall/templates/form_template.html
@@ -23,6 +23,7 @@
     }
 
     form {
+        background-color: rgb(106, 108, 109);
         width: 300px;
         margin: 0 auto;
         padding: 20px;
