--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -26,6 +26,7 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         transition: transform 0.2s;
         position: relative;
+        background-color: rgba(255, 255, 255, 0.77);
     }
 
     .add-member-link {
@@ -166,7 +167,7 @@
     .heading {
         text-align: center;
         font-size: 28px;
-        color: #333;
+        color: #a1a3a4;
         margin-bottom: 50px;
     }
 
