--- a/ZenseProject/videoCall/templates/addMember.html
+++ b/ZenseProject/videoCall/templates/addMember.html
@@ -4,6 +4,10 @@
 
 {% block style %}
 <style>
+    form{
+        background-color: rgb(105, 106, 107);
+    }
+
     a.goBack {
         display: inline-block;
         padding: 10px 20px;
