--- a/ZenseProject/videoCall/templates/layout.html
+++ b/ZenseProject/videoCall/templates/layout.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <img src="{% static 'images/background.jpg' %}" height="100%" width="100%" style="z-index: -10; position: fixed;">
     {% block content %} {% endblock content %}
 
 </body>
