--- a/ZenseProject/videoCall/templates/recording.html
+++ b/ZenseProject/videoCall/templates/recording.html
@@ -19,7 +19,7 @@
     h1 {
         margin-bottom: 20px;
         text-align: center;
-        color: #333;
+        color: aliceblue;
     }
 
     .video {
@@ -51,6 +51,7 @@
         }
 
         h1 {
+            color: aliceblue;
             font-size: 24px;
             margin-bottom: 10px;
         }
