--- a/ZenseProject/videoCall/templates/notifications.html
+++ b/ZenseProject/videoCall/templates/notifications.html
@@ -6,8 +6,8 @@
 <style>
     .heading {
         text-align: center;
-        font-size: 28px;
-        color: #333;
+        font-size: 38px;
+        color: #9e9999;
         margin-bottom: 50px;
     }
 
