--- a/ZenseProject/liveEdit/templates/doc.html
+++ b/ZenseProject/liveEdit/templates/doc.html
@@ -57,6 +57,8 @@
     <div id="outputArea"></div>
     {% if Doc.setting == "ADMIN" and profile %}
     <button id="runCode">Run Code</button>
+    {% elif Doc.setting == "EVERYONE" %} 
+    <button id="runCode">Run Code</button>
     {% endif %}
     <div id="editor"></div>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
